adding hyperlink google maps

--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
             </div>
 
             <div class="col-lg-3 col-md-6 portfolio-item filter-card">
-              <a href="">
+              <a href="" target="_blank">
                 <img src="img/portfolio/pengrajin1.png" alt="" />
                 <div class="details">
                   <h4>Anyaman Aseupan Ibu Susi</h4>
@@ -291,7 +291,7 @@
             </div>
 
             <div class="col-lg-3 col-md-6 portfolio-item filter-app">
-              <a href="">
+              <a href="https://maps.app.goo.gl/VW1pm9225yAWk2Uo7" target="_blank">
                 <img src="img/portfolio/umkm3.png" alt="" />
                 <div class="details">
                   <h4>Keripik Majulancar</h4>
@@ -301,7 +301,7 @@
             </div>
 
             <div class="col-lg-3 col-md-6 portfolio-item filter-logo">
-              <a href="">
+              <a href="" target="_blank">
                 <img src="img/portfolio/wisata1.png" alt="" />
                 <div class="details">
                   <h4>Curug Panganten</h4>
@@ -341,7 +341,7 @@
             </div>
 
             <div class="col-lg-3 col-md-6 portfolio-item filter-app">
-              <a href="">
+              <a href="https://maps.app.goo.gl/tmouH2JHwP9RdQSs8" target="_blank">
                 <img src="img/portfolio/umkm5.png" alt="" />
                 <div class="details">
                   <h4>Risma Snack</h4>
