--- a/index.html
+++ b/index.html
@@ -105,8 +105,8 @@
                 <div class="icon"><i class="fas fa-cookie"></i></div>
                 <h4 class="title">UMKM</h4>
                 <p class="description">
-                  Desa Sukamukti memiliki sejumlah UMKM yang tersebar di seluruh
-                  desa seperti UMKM makanan ringan keripik dan gula aren.
+                  Desa Sukamukti memiliki sejumlah UMKM yang tersebar di setiap
+                  dusun seperti UMKM makanan ringan keripik dan gula aren.
                 </p>
               </div>
 
@@ -114,7 +114,7 @@
                 <div class="icon"><i class="fas fa-user-ninja"></i></div>
                 <h4 class="title">Pengrajin</h4>
                 <p class="description">
-                  Beragam pengrajin anyaman dan kendang sudah banyak beroperasi
+                  Beragam pengrajin anyaman, kulit, dan gendang sudah banyak beroperasi
                   di Desa Sukamukti sejak lama.
                 </p>
               </div>
@@ -123,8 +123,8 @@
                 <div class="icon"><i class="fas fa-mountain"></i></div>
                 <h4 class="title">Destinasi Wisata</h4>
                 <p class="description">
-                  Pesona wisata seperti Curug dan Kebun Pinus memberikan
-                  sentuhan keindahan untuk Desa Sukamukti
+                  Pesona wisata seperti Curug dan Pohon Pinus memberikan
+                  sentuhan keindahan untuk Desa Sukamukti.
                 </p>
               </div>
             </div>
@@ -151,17 +151,17 @@
           </div>
           <div class="row counters flex-container">
             <div class="col-lg-3 col-6 text-center">
-              <span data-toggle="counter-up">9</span>
+              <span data-toggle="counter-up">6</span>
               <p>UMKM</p>
             </div>
 
             <div class="col-lg-3 col-6 text-center">
-              <span data-toggle="counter-up">2</span>
+              <span data-toggle="counter-up">3</span>
               <p>Pengrajin</p>
             </div>
 
             <div class="col-lg-3 col-6 text-center">
-              <span data-toggle="counter-up">4</span>
+              <span data-toggle="counter-up">5</span>
               <p>Destinasi Wisata</p>
             </div>
           </div>
@@ -301,7 +301,7 @@
             </div>
 
             <div class="col-lg-3 col-md-6 portfolio-item filter-logo">
-              <a href="" target="_blank">
+              <a href="https://maps.app.goo.gl/MbevqGg8SnJCqkDC6" target="_blank">
                 <img src="img/portfolio/wisata1.png" alt="" />
                 <div class="details">
                   <h4>Curug Panganten</h4>
@@ -321,17 +321,17 @@
             </div>
 
             <div class="col-lg-3 col-md-6 portfolio-item filter-logo">
-              <a href="">
+              <a href="https://maps.app.goo.gl/Vgs8ckq1Lsm8DhzC6" target="_blank">
                 <img src="img/portfolio/wisata2.png" alt="" />
                 <div class="details">
                   <h4>Pinus Ciherang</h4>
-                  <span>Wisata Kebun Pinus & Perkemahan</span>
+                  <span>Wisata Pohon Pinus & Perkemahan</span>
                 </div>
               </a>
             </div>
 
             <div class="col-lg-3 col-md-6 portfolio-item filter-logo">
-              <a href="">
+              <a href="https://maps.app.goo.gl/emcnepyUpbJi4PmEA" target="_blank">
                 <img src="img/portfolio/wisata3.png" alt="" />
                 <div class="details">
                   <h4>Curug Catang</h4>
@@ -361,11 +361,21 @@
             </div>
 
             <div class="col-lg-3 col-md-6 portfolio-item filter-logo">
-              <a href="">
-                <img src="img/portfolio/logo2.jpg" alt="" />
+              <a href="https://maps.app.goo.gl/7uxCSa6JmhLS7MRR7" target="_blank">
+                <img src="img/portfolio/wisata4.png" alt="" />
                 <div class="details">
-                  <h4>Logo 2</h4>
-                  <span>Alored dono par</span>
+                  <h4>Kampung Pramuka Kokoprak</h4>
+                  <span>Wisata Bumi Perkemahan</span>
+                </div>
+              </a>
+            </div>
+            
+            <div class="col-lg-3 col-md-6 portfolio-item filter-logo">
+              <a href="https://maps.app.goo.gl/R2fhewpesERZ1p3XA" target="_blank">
+                <img src="img/portfolio/wisata5.png" alt="" />
+                <div class="details">
+                  <h4>Curug Putih</h4>
+                  <span>Wisata Curug, Gmaps: Doed’s Yeuh</span>
                 </div>
               </a>
             </div>
