--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     <meta content="" name="keywords" />
     <meta content="" name="description" />
-
+    <meta name="google-site-verification" content="L3iKJV3yxfQEX7PNk9SpMxQ-r7NOW6glDxhRbmhPYqw" />
     <!-- Favicons -->
     <link href="img/logo.png" rel="icon" />
 
