--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
               </h2>
               <p style="text-align: justify">
                 Wonderful Sukamukti adalah sebuah website yang dibuat oleh
-                mahasiswa KKN 46 Sukamukti Univertas Siliwangi. Website ini
+                mahasiswa KKN 46 Sukamukti Universitas Siliwangi. Website ini
                 menyediakan informasi tentang UMKM, Pengrajin dan Destinasi
                 Wisata di Desa Sukamukti, Kecamatan Cisayong, Kabupaten
                 Tasikmalaya.
